# GROMACS-Analysis

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LIGAND_PARAMETERISATION.md  README.md  STRUCTURE.md  apo.py  gitignore  gromacs_analysis.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: paper.bib  paper.md
examples/: __init__.py  apo_example.py  complex_example.py  mixmd_example.py
md-configs/apo/: npt.mdp  nvt.mdp
md-configs/complex/: ions_prot_lig.mdp  md_prot_lig.mdp  npt_prot_lig.mdp  nvt_prot_lig.mdp
md-configs/examples/: apo.yaml  complex.yaml  mixmd.yaml
md-configs/mixmd/: em_mix.mdp  md_mix.mdp  npt_mix.mdp  nvt_mix.mdp
sim_prep/: __init__.py  apo.py  base.py  checkpoint.py  complex.py  config.py  mixmd.py
tests/: conftest.py  test_suite.py
utils/: __init__.py  amber_params.py  param_with_amber.sh  structure_io.py
